--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     background-color: lightgray;
     font-family: 'Ubuntu Mono', monospace;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
     color: #000;
     width: auto;
@@ -24,18 +24,20 @@ h2{
 
 a.hover{
 
-    color: #000;
+    color: #000000;
     text-decoration: underline;
 }
+
 .center {
   margin: auto;
-  width: 50%;
+  width: 100%;
   text-align: center;
 }
 
 .wrapper{
-float: none;
-  margin-top: 40px;
+    float: none;
+    margin-top: 40px;
+    width: 90%;
 }
 
 
@@ -52,11 +54,12 @@ li{
 .entry{
     float: left;
     text-align:  right;
+    font-size: 24px;
     background-color: #fff;
-    padding: 40 40 40 40;
+    padding: 20 20 20 20;
     border-radius: 8px;
     width: 100%;
-    margin: 20px 0 20px 0;
+    margin: 20px 0 0 0;
 }
 
 .entry-item{
@@ -66,9 +69,24 @@ li{
 
 @media screen and (min-width: 1000px)
 {
+
+a{
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'Ubuntu Mono', monospace;
+    color: #333333;
+}
+
 .alert
     {
-        width:500px;
+        width:100%;
     }
+
+.wrapper{
+    float: none;
+    margin-top: 40px;
+    width: 35%;
+}
+
 }
 
