--- a/styles.css
+++ b/styles.css
@@ -53,19 +53,40 @@ li{
 
 .entry{
     float: left;
-    text-align:  right;
-    font-size: 24px;
+    text-align:  center;    
     background-color: #fff;
-    padding: 20 20 20 20;
+    padding: 10px;
     border-radius: 8px;
-    width: 100%;
-    margin: 20px 0 0 0;
+    width: 100%;    
+    margin: 0 0 20px 0;    
+    
 }
 
 .entry-item{
     padding: 40px;
     width: auto;
 }
+
+a.btn{
+    
+    width: 45%;    
+    background-color: grey;
+    border-color: #000;
+    
+
+}
+
+a.btn:hover{
+    background: black;
+    border-color: black;
+}
+
+p.logname{
+    font-size: 17px;
+
+}
+
+
 
 @media screen and (min-width: 1000px)
 {
@@ -87,6 +108,7 @@ a{
     margin-top: 40px;
     width: 35%;
 }
+
 
 }
 
