--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: lightgray;
+    background-color: rgb(80, 80, 80);
     font-family: 'Ubuntu Mono', monospace;
     font-size: 16px;
     font-weight: 400;
@@ -54,7 +54,7 @@ li{
 .entry{
     float: left;
     text-align:  center;    
-    background-color: #fff;
+    background-color: darkgrey;
     padding: 10px;
     border-radius: 8px;
     width: 100%;    
