--- a/stylestest.css
+++ b/stylestest.css
@@ -85,3 +85,24 @@ body {
     color: #fff;
   }
   
+  .btn {
+    background-color: #4e4e4e;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn-wcl {
+    background-color: #2a7bd3;
+}
+
+.btn-wf {
+    background-color: #f7c331;
+}
