--- a/styles.css
+++ b/styles.css
@@ -127,11 +127,11 @@ a.btn {
 }
 
 a.btn-wcl {
-    background-color: #2a7bd3;
+    background-color: #839db8;
 }
 
 a.btn-wf {
-    background-color: #f7c331;
+    background-color: #839db8;
 }
 
 
